feat: bulk update for blog detail

--- a/src/contents/blogs/react-ahay-dududu.mdx
+++ b/src/contents/blogs/react-ahay-dududu.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Galau Karir dan Cara Gw Menentukan Arah'
-publishedAt: '2021-12-18'
-description: 'Artikel ini menceritakan tentang perjalanan gw dalam menemukan passion dan karier setelah lulus kuliah'
+title: 'Reach ahayydududu '
+publishedAt: '2024-5-10'
+description: 'Blog ini menceritakan tentang perjalanan gw dalam menemukan passion dan karier setelah lulus kuliah'
 banner: 'galau-karir.jpg'
 tags: ['life', 'career', 'passion']
 ---
