feat: fix image width and update blog detail

--- a/src/contents/blogs/baru-ini-article.mdx
+++ b/src/contents/blogs/baru-ini-article.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Baruu ini Article'
+title: 'Baruu ini Article Ada Foto'
 publishedAt: '2024-5-10'
 description: 'Blog ini menceritakan tentang perjalanan gw dalam menemukan passion dan karier setelah lulus kuliah'
 banner: 'galau-karir.jpg'
@@ -17,6 +17,14 @@ Menurut gw memang awalnya `Brand Kampus` adalah salah satu `'key'` gerbang diman
 Bagaimana value yang bisa kita berikan ke orang lain atau instansi yang akan kita tuju. Benar, hal seperti ini yang seharusnya dulu ada di pikiran gw sebagai seorang Fresh Graduate, namun memang nyatanya pikiran ini terbentuk ketika gw sudah menjalani pekerjaan selama 2 tahun setelah lulus dari kuliah.
 Yap, selama itu gw baru bisa belajar dan memahami, apa yang sebenarnya harus dipersiapkan untuk menjawab langkah apa yang akan gw ambil di jalan karier gw nanti.
 
+<MdxImage
+  alt='Example description'
+  src='/images/blog/galau-karir.jpg'
+  width={500}
+  height={300}
+  useSkeleton
+/>
+
 ## First Journey
 
 Setelah daftar dan test sana-sini sesuai dengan jurusan gw sebagai Teknik Pertanian, gw belum menemukan tempat sesuai dengan apa yang jadi keingin gw untuk bekerja, ada si tempat yang gw pengen jadi bagian di sana, tapi ngga sedikit juga gw gagal, gw hanya sampai ke bagian tes awal ajah
@@ -26,6 +34,14 @@ Sampai ada salah satu lowongan di web career kampus yang gw tertarik untuk dafta
 Memang tujuan diawal ya namanya seorang Fresh Graduate, jadi gw berpikir untuk cari pengalaman sebanyak mungkin diawal kerja, tanpa mementingkan gaji terlebih dahulu.
 Dalam seleksi masuk MT tersebut prosesnya seru. Mulai dari gw buat video profile kalo kalian mau tau ini [linknya](https://www.youtube.com/watch?v=Hs0PZvHN3nE&t=11s), terus lolos tes IQ, terus tes presentasi produk, cari harga pokok produk dan segalanya yang notabennya gw ga tau cara ngitungnya gimana wkwkw, tapi karena latar belakang gw teknik jadi ada dasar-dasar
 hitungan yang bisa dilogikakan deh.
+
+<MdxImage
+  alt='Example description'
+  src='/images/blog/align-items.webp'
+  width={300}
+  height={200}
+  useSkeleton
+/>
 
 ### Bekerja
 
