--- a/src/contents/blogs/test-blog-1.mdx
+++ b/src/contents/blogs/test-blog-1.mdx
@@ -3,9 +3,8 @@ title: 'How to Create Fully Reusable React Components'
 publishedAt: '2023-12-14'
 lastUpdated: '2024-04-21'
 description: 'Creating a component is fairly easy, but doing them correctly is a different story.'
-englishOnly: 'true'
 banner: 'jeremy-bishop-QUwLZNchflk-unsplash'
-tags: 'nextjs,react,tailwindcss'
+tags: ['nextjs', 'react', 'tailwindcss']
 ---
 
 ## Introduction
