feat: update post list and add project

--- a/src/contents/blogs/galau-karier-dan-cara-gw-menentukan-arah.mdx
+++ b/src/contents/blogs/galau-karier-dan-cara-gw-menentukan-arah.mdx
@@ -4,6 +4,7 @@ publishedAt: '2021-12-18'
 description: 'Artikel ini menceritakan tentang perjalanan gw dalam menemukan passion dan karier setelah lulus kuliah'
 banner: 'galau-karir.jpg'
 tags: ['life', 'career', 'passion']
+isShow: true
 ---
 
 Galau dalam berkarier mungkin menjadi hal wajar ya bagi setiap orang yang masuk ke umur 20an tahun, atau dalam bahasa anak sekarang adalah `Quarter Life Crisis` yaitu masa dimana
