--- a/src/contents/blogs/test-blog-1.mdx
+++ b/src/contents/blogs/test-blog-1.mdx
@@ -5,6 +5,7 @@ lastUpdated: '2024-04-21'
 description: 'Creating a component is fairly easy, but doing them correctly is a different story.'
 banner: 'jeremy-bishop-QUwLZNchflk-unsplash'
 tags: ['nextjs', 'react', 'tailwindcss']
+isShow: false
 ---
 
 ## Introduction
