--- a/src/contents/blogs/react-ahay-dududu.mdx
+++ b/src/contents/blogs/react-ahay-dududu.mdx
@@ -4,6 +4,7 @@ publishedAt: '2024-5-10'
 description: 'Blog ini menceritakan tentang perjalanan gw dalam menemukan passion dan karier setelah lulus kuliah'
 banner: 'galau-karir.jpg'
 tags: ['life', 'career', 'passion']
+isShow: false
 ---
 
 Galau dalam berkarier mungkin menjadi hal wajar ya bagi setiap orang yang masuk ke umur 20an tahun, atau dalam bahasa anak sekarang adalah `Quarter Life Crisis` yaitu masa dimana
