feat: add new blog posts and images for dotfiles management and Nginx symlink tutorial

--- a/src/contents/blogs/cara-deploy-personal-web-ke-vps-dengan-mudah.mdx
+++ b/src/contents/blogs/cara-deploy-personal-web-ke-vps-dengan-mudah.mdx
@@ -3,7 +3,7 @@ title: 'Cara Deploy Personal Web NextJs ke VPS Dengan Mudah'
 publishedAt: '2024-12-04'
 description: 'Belajar bagaimana cara mendeploy personal website ke vps dengan mudah'
 banner: 'aj-McsNra2VRQQ-unsplash.jpg'
-tags: ['setup', 'tips']
+tags: ['setup', 'deploy']
 isShow: true
 ---
 
