feat: update blog titles and descriptions for clarity and engagement

--- a/src/contents/blogs/save-your-dotfiles.mdx
+++ b/src/contents/blogs/save-your-dotfiles.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Ngga takut kehilangan dotfiles, setelah tau GNU Stow!'
+title: 'Tidak Takut Kehilangan Dotfiles Lagi dengan GNU Stow!'
 publishedAt: '2025-02-09'
-description: 'Ga perlu lama setting ulang device, karena ada Stow yang bisa manage dotfiles kalian tanpa takut hilang'
+description: 'Kelola dotfiles dengan mudah dan rapi menggunakan GNU Stow! Tidak perlu setting ulang dari nol setelah reinstall sistem.'
 banner: 'niklas-ohlrogge-niamoh-de-j-0olYcaihg-unsplash.jpg'
 tags: ['setup', 'dotfiles', 'symlink']
 isShow: true
