--- a/src/contents/blogs/cara-deploy-personal-web-ke-vps-dengan-mudah.mdx
+++ b/src/contents/blogs/cara-deploy-personal-web-ke-vps-dengan-mudah.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Cara Deploy Personal Web NextJs ke VPS Dengan Mudah'
+title: 'Deploy Personal Web NextJs ke VPS Dengan Mudah'
 publishedAt: '2024-12-04'
-description: 'Belajar bagaimana cara mendeploy personal website ke vps dengan mudah'
+description: 'Panduan lengkap langkah demi langkah untuk mendeploy aplikasi Next.js ke VPS, mulai dari pemilihan VPS, konfigurasi server, hingga pengaturan domain dan keamanan.'
 banner: 'aj-McsNra2VRQQ-unsplash.jpg'
 tags: ['setup', 'deploy']
 isShow: true
@@ -367,5 +367,6 @@ sudo ufw status numbered
 
 ## Penutup
 
-Selamat! kita telah selesai melakukan setup server dari 0 sampai bisa mendeploy dan bisa terakses oleh siapapun.
-Langkah-langkahnya mungkin terlihat tampak teknis dan munyulitkan, namun jika kita sudah terbiasa akan menjadi lebih cepat dan menyenangkan.
+Kita telah berhasil melakukan deployment Next.js ke VPS dari nol, mulai dari menghubungkan ke server, 
+menginstall dependency, mengkonfigurasi Nginx dan domain, hingga mengamankan server dengan SSL dan firewall.
+Meskipun tampak teknis, jika kita terbiasa, proses ini akan menjadi lebih mudah dan cepat. Semoga panduan ini bermanfaat!
